refactor(hateoas): Small refactor to code legibility
