# docs/swagger.json
@@ -428,7 +428,7 @@
                 "posters": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/responses.HATEOASPosterLinks"
+                        "$ref": "#/definitions/responses.Poster"
                     }
                 }
             }
@@ -458,7 +458,7 @@
                 }
             }
         },
-        "responses.HATEOASPosterItem": {
+        "responses.HATEOASMoviePosterItem": {
             "type": "object",
             "properties": {
                 "poster": {
@@ -487,7 +487,7 @@
             "type": "object",
             "properties": {
                 "_embedded": {
-                    "$ref": "#/definitions/responses.HATEOASPosterItem"
+                    "$ref": "#/definitions/responses.HATEOASMoviePosterItem"
                 },
                 "_templates": {},
                 "age_rating": {
@@ -545,7 +545,9 @@
         "responses.Poster": {
             "type": "object",
             "properties": {
-                "_templates": {},
+                "_links": {
+                    "$ref": "#/definitions/responses.HATEOASPosterLinks"
+                },
                 "alternativeText": {
                     "type": "string"
                 },
